# ros2_arUCO

./: .gitignore  README.docx  README.md  key.txt  key.txt.pub
install/: local_setup.sh  setup.sh
install/fake_tag_interfaces/share/fake_tag_interfaces/: package.bash  package.dsv  package.sh  package.zsh
install/fake_tag_interfaces/share/fake_tag_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_fake_tag_interfaces__rosidl_generator_cppExport.cmake  export_fake_tag_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_fake_tag_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  fake_tag_interfaces__rosidl_typesupport_cExport-noconfig.cmake  fake_tag_interfaces__rosidl_typesupport_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  (+3 more)
install/fake_tag_publisher/lib/fake_tag_publisher/: camera_calibrator  fake_tag_node  localization_node  static_tf_node  video_tag_detector
install/fake_tag_publisher/share/fake_tag_publisher/: package.bash  package.dsv  package.sh  package.zsh
log/: latest_build
src/fake_tag_interfaces/: CMakeLists.txt  package.xml
src/fake_tag_interfaces/msg/: TagDetectionArray.msg
src/fake_tag_publisher/: package.xml  setup.cfg  setup.py
src/fake_tag_publisher/config/: analyze_video.py  benchmark_perf.py  camera_info.yaml  dfw  generate_chessboard.py  tags_config.yaml
src/fake_tag_publisher/fake_tag_publisher/: camera_calibrator.py  localization_node.py  video_tag_detector.py
src/fake_tag_publisher/launch/: run_localization_video.launch.py  test_localization.launch.py
(+27 files in other folders)
