<?xml version="1.0"?>
<package format="3">
  <name>fake_tag_publisher</name>
  <version>0.0.0</version>
  <description>Fake AprilTag localization project</description>
  <maintainer email="panik_bel@todo.todo">panik_bel</maintainer>
  <license>Apache-2.0</license>

  <!-- build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>fake_tag_interfaces</depend>

  <!-- tests -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
